--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,7 +25,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid red;
+  border: 1px solid transparent;
 }
 
 main {
@@ -36,7 +36,7 @@ main {
 }
 
 .date_input_section {
-  border: 1px solid green;
+  border: 1px solid transparent;
   height: 30%;
   display: flex;
   align-items: center;
@@ -47,7 +47,7 @@ main {
   flex-direction: column;
   justify-content: flex-start;
   padding: 10px 20px;
-  border: 1px solid red;
+  border: 1px solid transparent;
 }
 .date_input_section_elem label {
   font-size: 0.7rem;
