--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -118,4 +118,18 @@ main {
 }
 #process_section_button:hover {
   background-color: #141414;
+}
+
+#display_section {
+  border: 1px solid transparent;
+  height: 60%;
+  padding: 1rem;
+}
+#display_section .display_section_elem {
+  font-family: poppins_bold_italic;
+  font-size: 3.5rem;
+  padding: 0 20px;
+}
+#display_section .display_section_elem b {
+  color: #864CFF;
 }/*# sourceMappingURL=main.css.map */
